<resources>
    <string name="app_name">Kalamullah</string>
    <string name="quran_eng_ara">Quran (Arabic-English)</string>
    <string name="shaikh_ali_jaber">Shaykh Ali Jaber</string>
    <string name="Saud_Ash_Shuraim">Saud Ash-Shuraim</string>
    <string name="meshary_afasy">Meshary Rashid Al-Afasy</string>
    <string name="hani_rifai">Hani Ar Rifai</string>
    <string name="ghamidi">Shaykh Saad al-Ghamdy</string>
    <string name="footer_website_name">www.kalamullah.com ver 3</string>
    <string name="loading_msg_dialog">Please not close this window and be patient, depends on size of the file this action might trake less then few seconds...</string>
    <string name="invalid_url_unable_to_read">Invalid URL, Unable to read</string>
    <string name="tafseer_color">#322e2a</string>
    <string name="read_surah_desc">Read more about Surah</string>
    <string name="name_of_the_surah">Name of the Surah</string>
    <string name="now_playing">Now Playing</string>
</resources>