<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector_custom_listview"
    android:orientation="horizontal"
    android:padding="5dip" >

    <!-- ListRow Left sied Thumbnail image -->

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
      	android:background="@drawable/image_bg_custom_listview"
        android:padding="3dip" >

        <ImageView
            android:id="@+id/iv_list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="display image"
            android:src="@drawable/quran_custom_listview" />
    </LinearLayout>

    <!-- Title Of Song -->

    <TextView
        android:id="@+id/tv_title_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/now_playing"
        android:textColor="#040404"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans" />

    <!-- Artist Name -->

    <TextView
        android:id="@+id/tv_title_e"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_a"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/name_of_the_surah"
        android:textColor="#040404"
        android:textSize="10dip" />

    <!-- Rightend Duration -->


    <!-- Rightend Arrow -->

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv_title_e"
        android:layout_alignTop="@+id/tv_title_a"
        android:gravity="right"
        android:text="5:45"
        android:textColor="#10bcc9"
        android:textSize="10dip"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv_title_e"
        android:layout_below="@+id/tv_title_a"
        android:contentDescription="arrow"
        android:src="@drawable/arrow_custom_listview" />

    <TextView
        android:id="@+id/tv_read_surah_desc_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/thumbnail"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@+id/imageView1"
        android:clickable="true" android:textColor="#040404"
        android:text="@string/read_surah_desc"
        android:textSize="9sp" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_alignRight="@+id/tv_read_surah_desc_Link"
        android:layout_below="@+id/tv_title_e"
        android:background="#674627" />

</RelativeLayout> 
